# LBL

./: .gitignore  Cargo.toml  Makefile  README.md  lbl.bat  treeview.MD
config/: default.json  schema.json
core/: Cargo.toml
core/src/: config.rs  fs.rs  hal.rs  lib.rs  loader.rs  logger.rs  main.rs  plugins.rs  security.rs
core/src/config/: parser.rs  schema_types.rs
core/src/fs/: fat32.rs  interface.rs  manager.rs
core/src/hal/: async_probe.rs  device_manager.rs
core/src/loader/: arch_adapter.rs  kernel_formats.rs
core/src/security/: signature.rs  tpm.rs
docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  LBL_SPECIFICATION.md  PLUGIN_API.md  extplugin.md
gui/: Cargo.toml
gui/src/: animations.rs  input.rs  lib.rs  renderer.rs  theme.rs  ui.rs
gui/src/widgets/: button.rs  list_view.rs  mod.rs  progress_bar.rs
stage1/: Makefile
stage1/bios/: boot_32.asm  linker_bios.ld  mbr.asm
stage1/common/: stage1_loader_utils.c  stage1_loader_utils.h
stage1/uefi/: LblUefi.c  LblUefi.h
